--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,8 @@ eureka:
 spring:
   application:
     name: eureka-server
+management:
+  endpoints:
+    web:
+      exposure:
+        include: beans,info,health,env
