--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,4 +14,5 @@ management:
   endpoints:
     web:
       exposure:
-        include: beans,info,health,env
+        include: info,health,env
+        exclude: beans
